# js-obfuscator

./: CMakeLists.txt  README.md
include/: lexer.h  obfuscator.h  parser.h
src/: lexer.cc  main.cc  obfuscator.cc  parser.cc
test/: input.js  output.js
